--- a/css/estilo.css
+++ b/css/estilo.css
@@ -3,7 +3,7 @@
 
 @font-face {
     font-family: 'fontelogo';
-    src: url("../_fonts/bubblegum-sans-regular.otf");
+    src: url("../fonts/bubblegum-sans-regular.otf");
 }
 
 body {
@@ -44,7 +44,7 @@ header#cabecalho img#icone {
 header#cabecalho {
     border-bottom: 1px #888888 solid;
     height: 150px;
-    background: url("../_imagens/glass-logo-peq.png") no-repeat 0px 80px;
+    background: url("../imagens/glass-logo-peq.png") no-repeat 0px 80px;
 
 }
 
